Fixed overflow issue

--- a/color-palette/styles.css
+++ b/color-palette/styles.css
@@ -25,8 +25,8 @@ body {
 }
 
 .main {
-    width: 85%;
-    height: 82%;
+    width:  90%;
+    height: 90%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -39,9 +39,9 @@ body {
 
 .heading {
     text-align: center;
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-    font-size: 2.25rem;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    font-size: 2rem;
     font-family: sans-serif;
 }
 
@@ -52,7 +52,7 @@ body {
     width: 100%;
     height: 85%;
     box-sizing: border-box;
-    padding: 0.5rem 1rem;
+    /* padding: 0.5rem 1rem; */
     overflow: hidden;
 }
 
